# TokenScannerCpp

./: CMakeLists.txt  CommentAutomaton.h  Database.h  DatalogProgram.h  Graph.h  IdentifierAtomaton.h  KeyWordAutomaton.h  Node.h  Parameter.h  Parser.h  Predicate.h  Relation.h  Rule.h  Scanner.h  Scheme.h  StringAutomaton.h  Token.h  Tuple.h  Variable.h  main.cpp
